--- a/frontend-task/add-products.html
+++ b/frontend-task/add-products.html
@@ -26,7 +26,7 @@
         <button id="update">update</button>
         <button id="remove">remove</button>
     </div>
-    <p><a href="home.html">Back to home</a></p>
+    <p><a href="index.html">Back to home</a></p>
 </main>
 <script src="baza.js" type="module"></script>
 <script src="firebase.js" type="module"></script>
