--- a/frontend-task/add-products.html
+++ b/frontend-task/add-products.html
@@ -23,8 +23,8 @@
     </div>
     <div class="buttons">
         <button id="add">add</button>
-        <button id="update">update</button>
-        <button id="remove">remove</button>
+ <!--       <button id="update">update</button>
+        <button id="remove">remove</button>-->
     </div>
     <p><a href="index.html">Back to home</a></p>
 </main>
